fixed so whole queue is visible :/

--- a/public_static/styles/queue.less
+++ b/public_static/styles/queue.less
@@ -130,7 +130,7 @@
 
     .tracks-wrapper {
         background-image: url('/static/images/stressed_linen.png');
-        height: 332px;
+        height: 303px;
         box-shadow:
             inset 0px 11px 8px -10px rgba(0, 0, 0, 0.5),
             inset 0px -11px 8px -10px rgba(0, 0, 0, 0.8);
